# LLMs-from-scratch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
setup/: README.md
src/Ch1/: README.md
src/Ch2/: README.md
src/Ch2/bonus/bpe/: bpe-from-scratch.ipynb  bpe-from-scratch.ju.py  bpe_merges.txt  vocab.json
src/Ch2/bonus/dataloader/: dataloader-intuition.ipynb  dataloader-intuition.ju.py
src/Ch2/bonus/emb/: embeddings-and-linear-layers.ipynb  embeddings-and-linear-layers.ju.py
src/Ch2/main-chapter-code/: ch02.ipynb  ch02.ju.py  dataloader.ipynb  dataloader.ju.py
src/Ch3/main-chapter-code/: ch03.ipynb  ch03.ju.py  exercise-solutions.ipynb  exercise-solutions.ju.py  multihead-attention.ipynb  multihead-attention.ju.py
src/Ch4/main-chapter-code/: ch04.ipynb  ch04.ju.py  previous_chapters.py
