[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Implementing a ChatGPT-like LLM in PyTorch from scratch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "jupynium>=0.2.6",
    "jupyter-console>=6.6.3",
    "nbclassic>=1.2.0",
    "notebook>=7.3.3",
]

[tool.ruff]
ignore = ["E402"]
