[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Implementing a ChatGPT-like LLM in PyTorch from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "matplotlib>=3.10.1",
]

[tool.ruff]
ignore = ["E402"]

[dependency-groups]
dev = [
    "jupynium>=0.2.6",
    "nbclassic>=1.2.0",
    "notebook>=7.4.0",
]
